[gd_scene load_steps=10 format=3 uid="uid://qnw7051yjuf4"]

[ext_resource type="PackedScene" uid="uid://c37vi5itujbsu" path="res://Scenes/UI/Character Cusomization/character_option.tscn" id="1_a3lih"]
[ext_resource type="Script" path="res://Scripts/customization_menu.gd" id="1_i6dq8"]
[ext_resource type="Shader" path="res://Art/Shaders/colorswap.gdshader" id="1_jaydi"]
[ext_resource type="Texture2D" uid="uid://c8b18rvghcej6" path="res://Art/Sprites/palette blue orange.png" id="2_5djtr"]
[ext_resource type="Theme" uid="uid://d20y8va2yhr08" path="res://Art/Themes/ui text large.tres" id="3_h7e4y"]
[ext_resource type="PackedScene" uid="uid://beputxcs1pxrh" path="res://Scenes/UI/JuicyMovement.tscn" id="4_hskep"]
[ext_resource type="Texture2D" uid="uid://c36svb8uk5nrg" path="res://Art/Sprites/lock.png" id="5_ub4kr"]
[ext_resource type="Script" path="res://Scripts/float_in.gd" id="7_3qexv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_67unc"]
shader = ExtResource("1_jaydi")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/is_texture = false
shader_parameter/fps = 6.0
shader_parameter/color_threshold = 0.1
shader_parameter/palette = ExtResource("2_5djtr")

[node name="ChooseCharacter" type="Control" node_paths=PackedStringArray("first_button")]
material = SubResource("ShaderMaterial_67unc")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6dq8")
first_button = NodePath("Options/HBoxContainer/CharacterOption")

[node name="Options" type="Control" parent="."]
use_parent_material = true
anchors_preset = 0
offset_left = 320.0
offset_top = 230.0
offset_right = 320.0
offset_bottom = 230.0
script = ExtResource("7_3qexv")
offscreen_position_offset = Vector2(0, 170)

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
layout_mode = 0
offset_left = -212.0
offset_top = -50.0
offset_right = 213.0
offset_bottom = 50.0

[node name="CharacterOption" parent="Options/HBoxContainer" instance=ExtResource("1_a3lih")]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterOption2" parent="Options/HBoxContainer" instance=ExtResource("1_a3lih")]
layout_mode = 2
size_flags_horizontal = 3
character_name = "???"
sprite = ExtResource("5_ub4kr")

[node name="CharacterOption3" parent="Options/HBoxContainer" instance=ExtResource("1_a3lih")]
layout_mode = 2
size_flags_horizontal = 3
character_name = "???"
sprite = ExtResource("5_ub4kr")

[node name="CharacterOption4" parent="Options/HBoxContainer" instance=ExtResource("1_a3lih")]
layout_mode = 2
size_flags_horizontal = 3
character_name = "???"
sprite = ExtResource("5_ub4kr")

[node name="Title" type="RichTextLabel" parent="."]
use_parent_material = true
layout_mode = 0
offset_top = 70.0
offset_right = 640.0
offset_bottom = 119.0
pivot_offset = Vector2(320, 24)
theme = ExtResource("3_h7e4y")
bbcode_enabled = true
text = "[center]CHOOSE A DOG!"
script = ExtResource("7_3qexv")

[node name="JuicyMovement" parent="Title" node_paths=PackedStringArray("target_control") instance=ExtResource("4_hskep")]
target_control = NodePath("..")
bob_frequency = 5.0
bob_amplitude = 10.0
rot_frequency = 2.5
rot_amplitude = 10.0

[connection signal="pressed" from="Options/HBoxContainer/CharacterOption" to="." method="_on_character_option_pressed"]
